<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <TextView
        android:layout_marginTop="10dp"

        android:paddingLeft="2dp"
        android:textColor="#4F4F4F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_recupsenha"
        android:textSize="23sp"
        android:layout_marginBottom="2dp"/>

    <LinearLayout
        android:layout_margin="1dp"
        android:background="#9f9f9f"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <EditText
            android:hint="@string/hint_digiteemail"
            android:textColor="#9f9f9f"
            android:textColorHint="#9f9f9f"
            android:background="#ffffff"
            android:layout_margin="2dp"
            android:paddingLeft="5dp"
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_recupsenha"
        android:textSize="20sp"
        android:background="#2b9dff"
        android:textColor="#ffffff"/>

</LinearLayout>
</ScrollView>