<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f4f4f4"
        >


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageLogo"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"
            android:src="@drawable/abc_ic_menu_selectall_mtrl_alpha"
            android:layout_marginBottom="20dp"
            />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <TextView
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_acesso"
                android:textSize="28sp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:hint="@string/hint_email"
                    android:background="#ffffff"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="27sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:hint="Senha"
                    android:background="#ffffff"
                    android:paddingLeft="5dp"
                    android:layout_margin="2dp"
                    android:id="@+id/loginsenha"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="27sp"/>


            </LinearLayout>

            <Button
                android:shadowColor="#000000"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:padding="15dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_esqsenha"
                android:textSize="12sp"
                android:backgroundTint="#f4f4f4"
                android:onClick="esqueciSenha"/>

            <Button
                android:id="@+id/btn_entrar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_entrar"
                android:textSize="20sp"
                android:background="#2b9dff"
                android:textColor="#ffffff"
                android:onClick="autenticacao"/>

        </LinearLayout>




        <Button
            android:id="@+id/btn_criarconta"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_criarconta"
            android:textSize="20sp"
            android:background="#2b9dff"
            android:textColor="#ffffff"
            android:onClick="criarConta"/>

    </LinearLayout>

</ScrollView>