<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f4f4f4"
        >




        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <TextView
                android:paddingLeft="2dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seunome"
                android:textSize="23sp"
                android:layout_marginBottom="2dp"/>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:background="#ffffff"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/crianome"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp"/>

            </LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="2dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seuemail"
                android:textSize="23sp"
                android:layout_marginBottom="2dp"/>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:background="#ffffff"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/criaemail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp"/>


            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"

                android:paddingLeft="2dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suasenha"
                android:textSize="23sp"
                android:layout_marginBottom="2dp"/>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:background="#ffffff"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/criasenha"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"

                android:paddingLeft="2dp"
                android:textColor="#4F4F4F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rptsenha"
                android:textSize="23sp"
                android:layout_marginBottom="2dp"/>

            <LinearLayout
                android:layout_margin="3dp"
                android:background="#9f9f9f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <EditText
                    android:textColor="#9f9f9f"
                    android:textColorHint="#9f9f9f"
                    android:background="#ffffff"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/rptsenha"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp"/>

            </LinearLayout>




        </LinearLayout>




        <Button
            android:id="@+id/btn_criarconta"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_criar"
            android:textSize="20sp"
            android:background="#2b9dff"
            android:textColor="#ffffff"
            android:onClick="cadastrarConta"/>

    </LinearLayout>

</ScrollView>